--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "node server.mjs",
+    "pup:chrome": "node ./puppeteer/chrome.mjs",
+    "pup:h": "node ./puppeteer/simulate-horizontal.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^11.0.1",
-    "fastify": "^5.3.3"
+    "fastify": "^5.3.3",
+    "puppeteer-core": "^24.10.0"
   }
 }
