--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "fastify": "^5.3.3",
-    "puppeteer-core": "^24.10.0"
+    "puppeteer-core": "^24.10.0",
+    "sharp": "^0.34.2"
   }
 }
