--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "node server.mjs",
     "pup:chrome": "node ./puppeteer/chrome.mjs",
-    "pup:h": "node ./puppeteer/simulate-horizontal.mjs",
+    "pup:horizontal": "node ./puppeteer/simulate-horizontal.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
