Enhance Puppeteer scripts: add vertical simulation command and improve screenshot handling

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "server": "node server.mjs",
     "pup:chrome": "node ./puppeteer/chrome.mjs",
     "pup:horizontal": "node ./puppeteer/simulate-horizontal.mjs",
+    "pup:vertical": "node ./puppeteer/simulate-vertical.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
