--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "bw-downloader",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "server.mjs",
   "scripts": {
     "server": "node server.mjs",
-    "pup:chrome": "node ./puppeteer/chrome.mjs",
-    "pup:simulate": "node ./puppeteer/simulate.mjs",
+    "pup:chrome": "node chrome-puppet.mjs",
+    "pup:simulate": "node chrome-sim.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,7 +16,9 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "fastify": "^5.3.3",
-    "puppeteer-core": "^24.10.0",
+    "puppeteer-core": "^24.10.0"
+  },
+  "peerDependencies": {
     "sharp": "^0.34.2"
   }
 }
